--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2",
-    "prettier": "2.8.4"
+    "prettier": "2.8.4",
+    "sass": "^1.58.0"
   }
 }
