--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-spinners": "^0.13.8",
     "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
+    "use-breakpoint": "^3.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
